k8/api-qr-code-generator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: api-code-generator
  name: api-code-generator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-code-generator
  template:
    metadata:
      labels:
        app: api-code-generator
    spec:
      containers:
      - image: wilmost/qr-generator-api:latest
        name: qr-generator-api
        ports:
        - containerPort: 8000
