k8/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: api-code-generator
  name: api-code-generator
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8000
  selector:
    app: api-code-generator
status:
  loadBalancer: {}
