k8/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-code-generator-service
  labels:
    app: frontend-code-generator
spec:
  selector:
    app: frontend-code-generator
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
