k8/frontend-qr-code-generator-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-qr-code-generator-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: qrcode.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-code-generator-service
                port:
                  number: 80

          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api-code-generator
                port:
                  number: 80
